# deck-save

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  release-please-config.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml  release-please.yml  release.yml
dist-assets/: decksave.desktop
flatpak/: com.baldknobber.decksave.desktop  com.baldknobber.decksave.metainfo.xml  com.baldknobber.decksave.yml
scripts/: deck-install-flatpak.sh  deck-install.sh  deck-test-setup.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_custom_save_paths.sql  003_launcher_source.sql
src-tauri/src/: db.rs  gamepad.rs  launchers.rs  lib.rs  main.rs  manifest.rs  path_expander.rs  steam.rs  watcher.rs
src-tauri/src/commands/: backup.rs  mod.rs  scanner.rs  shortcut.rs  sync.rs  syncthing_mgr.rs
src-tauri/src/sync/: mod.rs  syncthing.rs
src/components/: Layout.tsx
src/components/deck/: DeckButton.tsx  DeckCard.tsx  DeckInput.tsx  DeckModal.tsx  DeckProgressBar.tsx  DeckSelect.tsx  DeckStatusBadge.tsx  DeckStepper.tsx  DeckToggle.tsx  GamepadHintBar.tsx  index.ts
src/contexts/: GamepadContext.tsx  SetupContext.tsx
src/hooks/: useGridNav.ts
src/lib/: api.ts
src/pages/: Dashboard.tsx  Settings.tsx  SetupWizard.tsx  SyncWizard.tsx
