[package]
name = "deck-save"
version = "0.1.0"
edition = "2021"

[lib]
name = "deck_save_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
steamlocate = "2"
ureq = { version = "2", features = ["json"] }
glob = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
notify = "8"
notify-debouncer-mini = "0.6"
